удалил nav__menu

--- a/index.html
+++ b/index.html
@@ -139,18 +139,16 @@
           <img src="./icon/logo.svg" aria-label="Логотип" alt="Логотип">
         </div>
 
-        <nav class="nav">
-
-          <div class="nav__menu">
+        <nav class="nav" aria-label="Главная навигация">
             <ul class="nav__list">
-              <li class="nav__list-link"><a href="#client">Кому подойдут услуги </a></li>
-              <li class="nav__list-link"><a href="#about">Обо мне</a></li>
-              <li class="nav__list-link"><a href="#price">Услуги</a></li>
-              <li class="nav__list-link"><a href="#consultation">Консультации</a></li>
-              <li class="nav__list-link"><a href="#feedback">Бонусы</a></li>
-              <li class="nav__list-link"><a href="#submit">С чего начать</a></li>
-              <li class="nav__list-link"><a href="#footer">Контакты</a></li>
-              <li class="nav__list-link"><a href='docs/order-and-payment.pdf' target="_blank">Заказ и оплата</a></li>
+              <li class="nav__list-link"><a href="#client" aria-label="Переход к блоку">Кому подойдут услуги </a></li>
+              <li class="nav__list-link"><a href="#about" aria-label="Переход к блоку">Обо мне</a></li>
+              <li class="nav__list-link"><a href="#price" aria-label="Переход к блоку">Услуги</a></li>
+              <li class="nav__list-link"><a href="#consultation"aria-label="Переход к блоку">Консультации</a></li>
+              <li class="nav__list-link"><a href="#feedback"aria-label="Переход к блоку">Бонусы</a></li>
+              <li class="nav__list-link"><a href="#submit"aria-label="Переход к блоку">С чего начать</a></li>
+              <li class="nav__list-link"><a href="#footer"aria-label="Переход к блоку">Контакты</a></li>
+              <li class="nav__list-link"><a href='docs/order-and-payment.pdf' target="_blank" aria-label="Переход к документу">Заказ и оплата</a></li>
               <li class="nav__list-link--more">
                 <button id="showMoreBtn">Посмотреть еще <span></span></button>
                 <ul class="nav__list--hidden" id="hiddenList">
@@ -176,8 +174,8 @@
             </ul>
 
             <div class="close"></div>
-          </div>
-        </nav>
+      
+      </nav>
 
 
         <div class="burger">
