забыл ветку создать

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               Введите не менее трёх символов
             </div>
           </div>
-          <div class="mb-5">
+          <div class="mb-4">
             <input class="form-check-input checkbox" type="checkbox" value="" id="acceptPay">
             <label class="form-check-label text-muted" for="acceptPay">
               Нажимая на кнопку “Отправить”, Вы даете согласие на <a href="docs/privacy-policy.pdf" class="alert-link" target="_blank">обработку своих персональных данных</a>
@@ -104,6 +104,19 @@
             <div class="mt-2 invalid-feedback">
               Вы должны согласиться на обработку персональных данных.
             </div>
+          </div>
+          <div class="mb-4 lh-sm">
+            <p class="mb-2">В случае, если Вы не получили заказ (не оказана услуга), Вам необходимо обратиться в службу технической поддержки:</p>
+            <ul class="mb-2">
+              <li>
+                - по телефону: <a href="tel:+375298405816" class="alert-link" target="_blank">+375 (29) 840-58-16</a>
+              </li>
+              <li>
+                - по почте: <a href="mailto:astroclinica@gmail.com" class="alert-link" target="_blank">astroclinica@gmail.com</a>
+              </li>
+            </ul>
+            <p class="mb-2">Менеджеры Вас проконсультируют.</p>
+            <i>При оплате банковской платежной картой возврат денежных средств осуществляется на карту, с которой была произведена оплата.</i>
           </div>
           <div class="mb-3">Способ оплаты:</div>
           <div class="mb-3">
@@ -1123,6 +1136,7 @@
           </div>
         </div>
       </div>
+      <hr class="pb-2">
     </div>
   </footer>
 
