добавил телефон в бургер (его не было)

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
               </div>
               <div class="nav__btn btn1 flex-center">
-                <a href="#!">НОМЕР ТЕЛЕФОНА</a>
+                <a href="tel:+375298405816" target="_blank">+375 (29) 840-58-16</a>
               </div>
             </ul>
 
