правки текста формы и футера

--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
             </div>
           </div>
           <div class="mb-4 lh-sm">
-            <p class="mb-2">В случае, если Вы не получили заказ (не оказана услуга), Вам необходимо обратиться в службу технической поддержки:</p>
-            <ul class="mb-2">
+            <p>В случае, если Вы не получили заказ (не оказана услуга), Вам необходимо обратиться в службу технической поддержки по почте: <a href="mailto:astroclinica@gmail.com" class="alert-link" target="_blank">astroclinica@gmail.com</a></p>
+           <!-- <ul class="mb-2">
               <li>
                 - по телефону: <a href="tel:+375298405816" class="alert-link" target="_blank">+375 (29) 840-58-16</a>
               </li>
               <li>
                 - по почте: <a href="mailto:astroclinica@gmail.com" class="alert-link" target="_blank">astroclinica@gmail.com</a>
               </li>
-            </ul>
+            </ul> -->
             <p class="mb-2">Менеджеры Вас проконсультируют.</p>
             <i>При оплате банковской платежной картой возврат денежных средств осуществляется на карту, с которой была произведена оплата.</i>
           </div>
@@ -1116,6 +1116,7 @@
             района</li>
           <li>Телефон: +375 (29) 840−58−16</li>
           <li>e-mail: astroclinica@gmail.com</li>
+          <li>Режим работы круглосуточно</li>
         </ul>
         <div class="footer__inner">
           <div class="footer__politic">
