-fixing of mistakes in Services, "unforgetable year";

--- a/index.html
+++ b/index.html
@@ -872,26 +872,19 @@
                 <div class="services__mini">
                   <h3>Незабываемый год</h3>
                   <p>Подробный анализ вашего личного солярного гороскопа
-                    на&nbsp;год + транзиты</p>
+                    на&nbsp;год + транзиты планет</p>
                 </div>
                 <span></span>
               </button>
 
               <div class="services__content">
-                <p>Предназначение и&nbsp;кармическая задача: сферы, рекомендации, задачи жизни, как найти свое
-                  предназначение и&nbsp;придти к&nbsp;нему
+                <p>Разбор вашего личного нового года (начиная от&nbsp;дня рождения): ключевые моменты года, благоприятные и&nbsp;неблагоприятные периоды, события
                 </p>
-                <p>Профориентация: сферы профессиональной реализации и&nbsp;способы достижения цели; работа
-                  в&nbsp;найме, бизнес или самозанятость; рекомендации по&nbsp;проработке негативных аспектов, которые
-                  мешают реализации
+                <p>Основные возможные события вашего личного года по&nbsp;основным сферам: работа, учеба, отношения, здоровье, финансы, путешествия и&nbsp;пр., рекомендации и&nbsp;стратегия по&nbsp;месяцам
                 </p>
-                <p>Отношения с&nbsp;финансами: сферы, в&nbsp;которых можно финансово приуспеть; рекомендации
-                  по&nbsp;проработке негативных аспектов, накапливать или тратить
-
+                <p>Сферы года, которым следует уделить особое внимание и рекомендации по разрешению кризисных ситуаций (если таковые будут в соляре)
                 </p>
-                <p>Варианты получения финансов: офлайн, онлайн, заграница, муж, родственники; можно&nbsp;ли брать
-                  кредиты
-
+                <p>Рекомендации по&nbsp;встрече соляра, которые положительно повлияют на&nbsp;ваш личный год
                 </p>
 
                 <div class="services__border">
