--- a/index.html
+++ b/index.html
@@ -1101,11 +1101,11 @@
     <div class="container">
       <div class="footer__wrapper">
         <ul class="footer__list">
-          <li> Индивидуальный предприниматель</li>
+          <li>Индивидуальный предприниматель</li>
           <li>Якушев Игорь Михайлович</li>
           <li>УНП 791 264 924</li>
           <li>Адрес: 212025, Республика Беларусь, Могилевская область, г. Могилев, ул. А. Кулешова, д. 5, кв. 81</li>
-          <li>Свидетельство о государственной регистрации от 18.01.2021 выдано Могилевской Администрацией Ленинского
+          <li>Свидетельство о государственной регистрации №190433 от 04.08.2023 выдано Могилевской Администрацией Ленинского
             района</li>
           <li>Телефон: +375 (29) 840−58−16</li>
           <li>e-mail: astroclinica@gmail.com</li>
