--- a/index.html
+++ b/index.html
@@ -1105,11 +1105,12 @@
           <li>Якушев Игорь Михайлович</li>
           <li>УНП 791 264 924</li>
           <li>Адрес: 212025, Республика Беларусь, Могилевская область, г. Могилев, ул. А. Кулешова, д. 5, кв. 81</li>
-          <li>Свидетельство о государственной регистрации №190433 от 04.08.2023 выдано Могилевской Администрацией Ленинского
+          <li>Свидетельство о государственной регистрации от 18.01.2021 выдано Могилевской Администрацией Ленинского
             района</li>
           <li>Телефон: +375 (29) 840−58−16</li>
           <li>e-mail: astroclinica@gmail.com</li>
           <li>Режим работы круглосуточно</li>
+          <li>Номер регистрации в БелГИЭ 190433 от 04.08.2023</li>
         </ul>
         <div class="footer__inner">
           <div class="footer__politic">
